# Arachnel

./: .gitignore  AGENTS.md  CMakeLists.txt  Main.qml  README.md  README.ru.md  SettingsPage.qml  freetp.arach  main.cpp  qml-test-err.txt  run.ps1  run.sh  test_dedup.cpp  weblate.yml
.cursor/commands/: deploy-local.md  start-release.md
.cursor/rules/: arachnel-project.mdc  i18n.mdc
.cursor/skills/material3-qml-ui/: SKILL.md  qmlmaterial-catalog.md  reference.md
.cursor/skills/unicase-source-formatting/: SKILL.md
.github/workflows/: release.yml
cmake/: ArachnelLibtorrent.cmake  ArachnelPluginSdk.cmake  ArachnelPlugins.cmake  ArachnelTranslations.cmake  patch-qml-material-win.cmake
docs/: ARCHITECTURE.md  CATALOG_FORMAT.md  CONTRIBUTING.md  PLUGIN_SDK.md  RELEASE.md  ROADMAP.md  TRANSLATING.md  VISION.md
freetp/: games.json
packaging/linux/: arachnel.desktop
plugins/: README.md
plugins/freetp/: games.json  games.sample.json  plugin.json
plugins/freetp/linux/: README.md
plugins/freetp/src/: archive_installer.cpp  archive_installer.h  freetp_plugin.cpp  freetp_plugin.h  installer_runner.cpp  installer_runner.h  linux_fix_launch.cpp  linux_fix_launch.h  plugin_entry.cpp
qml/: Main.qml
qml/app/: AppUpdateProgressOverlay.qml  AppWindow.qml  CatalogPage.qml  CatalogPageContent.qml  CrashReportWindow.qml  DownloadsPage.qml  GameDetailsContent.qml  GameDetailsPage.qml  GameSettingsRuntimePanel.qml  GameSettingsSheet.qml  HomePage.qml  LibraryContent.qml  LibraryEmptyState.qml  LibraryPage.qml  PluginInstallOverlay.qml
qml/components/: AppRail.qml  AppSnackbar.qml  AppTitleBar.qml  AppUpdateSheet.qml  CatalogCompactBar.qml  CatalogEmptyResults.qml  CatalogFilterSheet.qml  CatalogGameCard.qml  CatalogIntroHeader.qml  CatalogNoSourcesPanel.qml  CatalogScrollHeader.qml  CatalogScrollViews.qml  CatalogSourceChips.qml  CatalogStickyToolbar.qml  CrashReportDialog.qml  CrashReportPanel.qml  DownloadJobCard.qml  DownloadJobGroupCard.qml  DownloadJobProgressTrack.qml  DownloadProgressButton.qml  GameDetailsMediaPreview.qml  GameDetailsMediaSection.qml  GamePoster.qml  LibraryGameCard.qml  NotificationsPopup.qml  ProtonRequiredDialog.qml  RunningGameBar.qml  SourceHelpDialog.qml  SpiderWebMark.qml  StatCard.qml  ThemedCheckBox.qml  WindowChromeButton.qml  WindowResizeEdges.qml
qml/i18n/: Messages.qml
qml/nav/: PageEnterMotion.qml  PageExitMotion.qml  PageNavigator.qml
qml/onboarding/: OnboardingBasicsStep.qml  OnboardingFinalSteps.qml  OnboardingSheet.qml  OnboardingStoragePluginsStep.qml
qml/settings/: InstallAddonSelectionSheet.qml  InstallLocationSheet.qml  SettingsAboutPage.qml  SettingsAppearancePage.qml  SettingsHubPage.qml  SettingsLaunchPage.qml  SettingsPage.qml  SettingsPluginStorePage.qml  SettingsPluginsPage.qml  SettingsSheet.qml  SettingsSourceFormPage.qml  SettingsSourcesPage.qml  SettingsStoragePage.qml  SettingsUpdatesPage.qml  SteamInstallModeSheet.qml  SteamInstallPrefsSheet.qml  SteamidraTrustSheet.qml
qml/theme/: AccentColors.qml  Appearance.qml
resources/linux/: arachnel.desktop
scripts/: package-freetp-plugin.ps1  setup-material-fonts.sh
scripts/ci/: generate-changelog.sh  package-appimage.sh  sign-windows.ps1
setup/: CMakeLists.txt  arachnel_admin.manifest.rc  pack.ps1
setup/qml/: Main.qml  SetupWindow.qml
setup/qml/components/: SetupTitleBar.qml  SpiderWebMark.qml  WindowChromeButton.qml
setup/qml/theme/: Appearance.qml
setup/src/: main.cpp  payload_footer.cpp  payload_footer.h  payload_footer_io.cpp  payload_footer_io.h  payload_footer_qt.h  self_extractor.cpp  self_extractor.h  setup_backend.cpp  setup_backend.h  setup_translation.cpp  setup_translation.h  stub_extractor.cpp  stub_extractor.h  stub_main.cpp  uninstall_main.cpp  win_container_io.cpp  win_container_io.h  win_install_registry.cpp  win_install_registry.h
setup/translations/: arachnel_setup_en.ts  arachnel_setup_ru.ts
src/: CMakeLists.txt  crash_log.cpp  crash_log.h  main.cpp
src/app/: crash_log.cpp  crash_log.h  crash_log_internal.h  crash_log_report.cpp  main.cpp  settings_identity.cpp  settings_identity.h
src/core/: README.md  app_updater.cpp  app_updater.h  catalog_feed_loader.cpp  catalog_feed_loader.h  catalog_model.cpp  catalog_model.h  catalog_parser.cpp  catalog_parser.h  catalog_types.cpp  catalog_types.h  core_controller.cpp  core_controller.h  cover_image_cache.cpp  cover_image_cache.h  file_utils.cpp  file_utils.h  game_metadata_service.cpp  game_metadata_service.h  http_download_session.cpp  http_download_session.h  i18n.h  install_analysis.cpp  install_analysis.h  install_analyzer.cpp  install_analyzer.h  install_heuristics.cpp  install_heuristics.h  install_kind.cpp  install_kind.h  install_kind_probe_service.cpp  install_kind_probe_service.h  job_display.cpp  job_display.h  job_kind.cpp  job_kind.h  job_model.cpp  job_model.h  job_orchestrator.cpp  job_orchestrator.h  (+36 more)
src/core/catalog/: README.md  catalog_controller.cpp  catalog_controller.h  catalog_cover_coordinator.cpp  catalog_cover_coordinator.h  catalog_facade_1.cpp  catalog_facade_2.cpp  catalog_facade_3.cpp  catalog_feed_loader.cpp  catalog_filter_service.cpp  catalog_filter_service.h  catalog_model.h  catalog_parser.cpp  catalog_parser.h  catalog_types.cpp  catalog_types.h  game_metadata_service.cpp  game_metadata_service.h  game_metadata_service_helpers.h  game_metadata_service_network.cpp
src/core/facade/: README.md  core_controller.cpp  core_controller.h  core_controller_api.h  core_controller_impl.h  core_controller_p.h  core_wiring_services.cpp  crash_facade.cpp  crash_facade.h
src/core/i18n/: translation_service.cpp  (+1 more)
tools/: _hubcap_audit_authz.py  _hubcap_audit_extra.py  _hubcap_audit_extract.py  _hubcap_audit_probe.py  _hubcap_audit_verbose.py  convert_qsTr_to_english.py  export_app_icons.py  fill_en_identity_translations.py  fill_ru_translations.py  generate_bw_icon.py  generate_readme_carousel.py  normalize_translations.py  prepare_id_translations.py  render_app_icon.py  verify_readme_carousel.py
translations/: arachnel_en.ts  arachnel_ru.ts
(+76 files in other folders)
